--- a/Probability_Theory.ipynb
+++ b/Probability_Theory.ipynb
@@ -19,7 +19,7 @@
         "id": "YIl2XhtnR9Rg"
       },
       "source": [
-        "# Lab 1 : Probability Theory\n",
+        "# Probability Theory\n",
         "\n",
         "\n",
         "1.   Sampling from uniform distribution\n",
