Update and rename Lab_2_Linear_Algebra.ipynb to Linear_Algebra.ipynb

--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Lab_2_Linear_Algebra.ipynb",
+      "name": "Linear_Algebra.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -31,7 +31,7 @@
       },
       "source": [
         " \n",
-        "# Lab 2 : Linear Algebra\n",
+        "# Linear Algebra\n",
         "\n",
         "  Solutions of the system of equations\n",
         "\n",
